@@ -1,3 +1,8 @@
+
+	* bin/cygport.in (verbose, cygconf, cygmake, cyginstall):
+	Preserve shell metacharacters in args.
+	Patch by Eric Blake <http://cygwin.com/ml/cygwin/2006-12/msg00440.html>.
+
 	* lib/ruby-gnome2.cygclass:
 	Ruby-GNOME2 does not support parallel make.
 	Fix modules which don't use a src subdir.
